[Inf] Switch to faster Node.JS Web Framework

--- a/src/harvester/storage-engine/Dockerfile
+++ b/src/harvester/storage-engine/Dockerfile
@@ -4,7 +4,7 @@ COPY . /app
 WORKDIR /app
 
 # Removes compilation artifacts
-RUN cd /app && rm -rf dist node_modules
+RUN cd /app && rm -rf built node_modules
 RUN cd /app && npm install
 
 CMD npm run start
