--- a/src/harvester/satellite-constellations/package.json
+++ b/src/harvester/satellite-constellations/package.json
@@ -9,6 +9,8 @@
   },
   "author": "Robert Richter",
   "dependencies": {
+    "@types/pg": "^8.11.6",
+    "pg": "^8.12.0",
     "typescript": "^5.4.4",
     "undici-types": "^6.12.0"
   },
