--- a/.github/workflows/tex.yml
+++ b/.github/workflows/tex.yml
@@ -54,7 +54,6 @@ jobs:
           cp result/main.pdf ./artifacts/thesis.pdf
 
       - name: Deploy to branch
-        if: github.ref == 'refs/heads/main'
         run: |
           cd ${{ github.workspace }}
 
@@ -69,7 +68,7 @@ jobs:
           git switch static-html
 
           rm -rf *
-          rm -rf .*
+          rm -rf .github
           cp -r ../artifacts/* .
 
           git add .
