--- a/.github/workflows/tex.yml
+++ b/.github/workflows/tex.yml
@@ -7,9 +7,7 @@ on:
       - proposal.nix
       - tex.nix
       - .github/workflows/tex.yml
-      - proposal/**
-      - thesis/**
-
+      - tex/**
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
