--- a/.github/workflows/tex.yml
+++ b/.github/workflows/tex.yml
@@ -7,7 +7,8 @@ on:
       - proposal.nix
       - tex.nix
       - .github/workflows/tex.yml
-      - tex/**
+      - tex/thesis/**
+      - tex/proposal/**
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
