Only commit on main

--- a/.github/workflows/tex.yml
+++ b/.github/workflows/tex.yml
@@ -53,6 +53,7 @@ jobs:
           cp result/main.pdf ./artifacts/thesis.pdf
 
       - name: Deploy to branch
+        if: ref == 'refs/heads/main'
         run: |
           cd ${{ github.workspace }}
 
