--- a/src/db-controller/docker-compose.yml
+++ b/src/db-controller/docker-compose.yml
@@ -23,11 +23,10 @@ services:
 
   jupyter:
     container_name: jupyter
+    user: "$UID:$GID"
     image: jupyter/datascience-notebook
     ports:
       - 8888:8888
-    volumes:
-      - .:/home/jovyan:Z
 
   duckdb:
     container_name: duckdb
