Switch to USER_ID instead of UID

--- a/src/db-controller/docker-compose.yml
+++ b/src/db-controller/docker-compose.yml
@@ -23,7 +23,7 @@ services:
 
   jupyter:
     container_name: jupyter
-    user: "$UID:$GID"
+    user: "$USER_ID:$GID"
     image: jupyter/datascience-notebook
     ports:
       - 8888:8888
