Adding missing volume back in

--- a/src/db-controller/docker-compose.yml
+++ b/src/db-controller/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     image: jupyter/datascience-notebook
     ports:
       - 8888:8888
+    volumes:
+      - .:/home/joyvan
 
   duckdb:
     container_name: duckdb
