--- a/.github/workflows/tex.yml
+++ b/.github/workflows/tex.yml
@@ -53,7 +53,7 @@ jobs:
           cd ${{ github.workspace }}
           cd tex/thesis
 
-          nix-build tex.nix
+          nix-build
           cp result/main.pdf ../../artifacts/thesis.pdf
 
           cd ../..
