--- a/.github/workflows/tex.yml
+++ b/.github/workflows/tex.yml
@@ -1,90 +1,30 @@
-# Sample workflow for building and deploying a Hugo site to GitHub Pages
-name: Deploy Artifacts
+name: Build LaTeX Documents and Upload Artifacts
 
 on:
   push:
-    paths:
-      - proposal.nix
-      - tex.nix
+    paths: &paths
       - .github/workflows/tex.yml
       - tex/thesis/**
       - tex/proposal/**
   pull_request:
-    paths:
-      - proposal.nix
-      - tex.nix
-      - .github/workflows/tex.yml
-      - tex/thesis/**
-      - tex/proposal/**
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
-# Default to bash
-defaults:
-  run:
-    shell: bash
+    paths: *paths
 
 jobs:
-  build-documents:
+  build-latex:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        document: [proposal, thesis]
     steps:
-      - name: Checkout Repository
+      - name: Set up Git repository
         uses: actions/checkout@v4
-      - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
-
-      - name: Build Proposal Document
-        run: |
-          cd ${{ github.workspace }}
-          mkdir artifacts
-          cd tex/proposal
-
-          nix-build
-          cp result/main.pdf ../../artifacts/proposal.pdf
-
-          cd ../..
-
-      # Builds main.pdf and saves it in workspace root
-      - name: Build LaTeX Document
-        run: |
-          cd ${{ github.workspace }}
-          cd tex/thesis
-
-          nix-build
-          cp result/main.pdf ../../artifacts/thesis.pdf
-
-          cd ../..
-
-      - name: Deploy to branch
-        if: github.ref == 'refs/heads/main'
-        run: |
-          cd ${{ github.workspace }}
-
-          # Push results to branch "static-html"
-          mkdir _temp
-          cp -r ./.git _temp
-
-          cd _temp
-          git config user.email "botty@botnet.com"
-          git config user.name "Botty the Bot"
-          git fetch --all
-          git switch static-html
-
-          rm -rf *
-          rm -rf .github
-          cp -r ../artifacts/* .
-
-          git add .
-          git diff-index --quiet HEAD || git commit -m "Deployment of current artifacts"
-          git push
-
+      - name: Compile LaTeX document
+        uses: xu-cheng/latex-action@v3
+        with:
+          root_file: main.tex
+          working_directory: tex/${{ matrix.document }}
+      - name: Upload PDF file
+        uses: actions/upload-artifact@v4
+        with:
+          name: PDF-${{ matrix.document }}
+          path: ${{ matrix.document }}/main.pdf
