--- a/.github/workflows/tex.yml
+++ b/.github/workflows/tex.yml
@@ -2,6 +2,8 @@ name: Build LaTeX Documents and Upload Artifacts
 
 on:
   push:
+    branches:
+      - main
     paths:
       - .github/workflows/tex.yml
       - tex/thesis/**
