--- a/.github/workflows/tex.yml
+++ b/.github/workflows/tex.yml
@@ -31,5 +31,5 @@ jobs:
       - name: Upload PDF file
         uses: actions/upload-artifact@v4
         with:
-          name: PDF-${{ matrix.document }}
-          path: ${{ matrix.document }}/main.pdf
+          name: ${{ matrix.document }}
+          path: tex/${{ matrix.document }}/main.pdf
